--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -27,6 +27,7 @@
             
           </li>
         </ul>
+        <a class="nav-link"  style="cursor:pointer" (click)="logout()"> Çıkış</a>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
