--- a/src/app/components/user-datail/user-datail.component.html
+++ b/src/app/components/user-datail/user-datail.component.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="btn-group float-right" role="group">
                     <button type="button" class="btn btn-danger" (click)="followUser(user?.id)">{{followText}}</button>
-                    <button type="button" class="btn btn-success">Mesaj</button>
+                    <button type="button" class="btn btn-success" (click)="openSendMessageModel()">Mesaj</button>
                 </div>
             </div>
           </div>
