--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <app-navi></app-navi>
+  <app-navi *ngIf="result"></app-navi>
   <div class="row">
    
     <div class="col-md-12">
