--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,7 +1,7 @@
 <ul class="list-group">
-  <li  [class]="getAllCategoryClass()" routerLink = "/products">Tüm Ürünler</li>
+  <li  [class]="getAllCategoryClass()" routerLink = "/admin/products">Tüm Ürünler</li>
   <li (click)="setCurrentCategory(category)"
-  routerLink = "/products/category/{{category.id}}"
+  routerLink = "/admin/products/category/{{category.id}}"
   *ngFor="let category of categories" 
   [class]="getCurrentCategoryClass(category)">
   {{category.name}}</li>
