--- a/src/app/components/followers/followers.component.html
+++ b/src/app/components/followers/followers.component.html
@@ -12,7 +12,7 @@
                             Arkadaş Ekle
                         </button>
                     </div>
-                    <a [routerLink]="['/users/',user.id]" class="view-more">Profili Görüntüle</a>
+                    <a [routerLink]="['/admin/users/',user.id]" class="view-more">Profili Görüntüle</a>
                 </div>
             </div>
         </div>
