--- a/src/app/components/friends/friends.component.html
+++ b/src/app/components/friends/friends.component.html
@@ -56,7 +56,7 @@
               Arkadaş Ekle
             </button>
           </div>
-          <a [routerLink]="['/users/', user.id]" class="view-more"
+          <a [routerLink]="['/admin/users/', user.id]" class="view-more"
             >Profili Görüntüle</a
           >
         </div>
