--- a/src/app/components/inbox/inbox.component.html
+++ b/src/app/components/inbox/inbox.component.html
@@ -4,16 +4,29 @@
         <th>Gönderen Adı</th>
         <th>Tarih</th>
         <th></th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let message of messages">
         <td>{{ message.senderName }}</td>
-        <td>{{ message.dateAdded }}</td>    
+        <td>{{ message.dateAdded }}</td>   
         <td><button (click)="showMessage(message.id)"  type="submit" class="btn btn-success">
-            Görüntüle
+            Görüntüle 
         </button></td>     
+        <a *ngIf=!message.isRead>Okunmamış</a> 
+        <td><button [swal]="deleteSwal" (confirm)="deleteMethod(message.id)">Sil</button></td>
       </tr>
     </tbody>
     
   </table>
+
+  <swal
+  #deleteSwal
+  title="Emin misiniz?"
+  text="Silmek istediğiniz veri geri alınamaz."
+  type="question"
+  [showCancelButton]="true"
+  [focusCancel]="true">
+</swal>
